--- a/style/index.css
+++ b/style/index.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;700&family=Playfair+Display:wght@400;700&family=Poppins:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;700&family=Playfair+Display:wght@400;700&family=Poppins:wght@400;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
 }
-html{
+
+html {
   scroll-behavior: smooth;
 }
 
@@ -34,25 +35,27 @@ ul {
 }
 
 ul a {
-  font-family: 'Hind Vadodara';
+  font-family: "Hind Vadodara";
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.01em;
-  color: #331B3B;
+  color: #331b3b;
   text-decoration: none;
 }
 
 .home a {
   font-weight: 600;
 }
-.imagen_nav{
+
+.imagen_nav {
   z-index: 9999;
 }
-.imagen_nav a{
+
+.imagen_nav a {
   text-decoration: none;
-  color: #331B3B;
+  color: #331b3b;
 }
 
 .underhome::after {
@@ -66,11 +69,12 @@ ul a {
   width: 50%;
   transition: all 0.25s ease-out;
 }
+
 .underhome:hover:after {
   width: 100%;
 }
 
-.undernav::after{
+.undernav::after {
   content: "";
   position: absolute;
   left: 0;
@@ -78,37 +82,39 @@ ul a {
   bottom: 0;
   border: 1px solid #fdc221;
   width: 100%;
-  transform: scaleX(0);transform-origin: bottom right;
+  transform: scaleX(0);
+  transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
-.undernav:hover::after{
+
+.undernav:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
-.img-r{
-  transition: all .25s ease-out;
+
+.img-r {
+  transition: all 0.25s ease-out;
 }
-.img-r:hover{
+
+.img-r:hover {
   scale: 1.05;
 }
 
-
 .titulo_nav {
-  font-family: 'Playfair Display';
+  font-family: "Playfair Display";
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0.01em;
-  color: #331B3B;
+  color: #331b3b;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
 }
 
 .titulo_nav {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 20px;
   line-height: 28px;
   letter-spacing: 0.01em;
-  color: #331B3B;
+  color: #331b3b;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -162,12 +168,12 @@ ul a {
   width: fit-content;
   padding: 3% 10%;
   /* height: 55px; */
-  background: #331B3B;
+  background: #331b3b;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) .5s;
+  transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.5s;
 }
 
 .boton_home:hover {
@@ -238,7 +244,7 @@ span {
   width: 260px;
   height: 170px;
   padding: 1% 2%;
-  transition: .2s all ease-in-out;
+  transition: 0.2s all ease-in-out;
 }
 
 .card:hover {
@@ -333,7 +339,7 @@ span {
   padding: 20px 10px;
   margin-top: 5%;
   text-align: center;
-  transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) .5s;
+  transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.5s;
 }
 
 .BotonacercaNosotros:hover {
@@ -461,7 +467,7 @@ span {
   border-radius: 50px;
   justify-content: center;
   align-items: center;
-  transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) .5s;
+  transition: all cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.5s;
 }
 
 .botonTrabajoR a {
@@ -490,17 +496,108 @@ span {
   transition: width 1s ease-in-out;
 }
 
-
 .underExpertos:hover:after {
-
   width: 90%;
 }
 
 /* Media query's NM */
 
+
+/* Pantallas +2k */
+@media screen and (min-width: 2064px) {
+  ul{
+    gap: 20%;
+  }
+  .navbar ul li a{
+    font-size: 30px;
+  }
+  .titulo_nav{
+    font-size: 50px;
+  }
+  .img-r{
+    width: 100px;
+  }
+  .titulo_home{
+    font-size: 80px;
+  }
+  .texto_home{
+    font-size: 35px;
+  }
+  .boton_home a{
+    font-size: 30px;
+  }
+
+  .titulo_LoQueHacemos{
+    font-size: 60px;
+  }
+  .fondo_lo_que_hacermos{
+    height: 1240px;
+  }
+  .card{
+    width: 20%;
+    height: 300px;
+    max-height: fit-content;
+  }
+  .icon img{
+    width: 60px;
+  }
+  .card_title{
+    font-size: 25px;
+  }
+  .card_info{
+    font-size: 24px;
+  }
+  .contenedor_acercaNosotros{
+    justify-content: space-between;
+    gap: 0;
+  }
+  .info_acercaNosotros{
+    width: 45%;
+    margin-right: 2%;
+  }
+  .img_acercaNosotros{
+    width: 45%;
+  }
+
+  .TituloacercaNosotros{
+    font-size: 80px;
+  }
+  .TextoacercaNosotros{
+    margin-top: 11%;
+    font-size: 35px;
+  }
+  .BotonacercaNosotros{
+    width: fit-content;
+    padding: 2% 10%;
+  }
+  .BotonacercaNosotros a{
+    font-size: 35px;
+  }
+
+  .titulo_trabajosRecientes{
+    font-size: 55px;
+  }
+  .Texto_trabajosRecientes{
+    font-size: 30px;
+  }
+  .trabajosrecientes_card {
+    width: 600px;
+  }
+  .nameTrabajoR{
+    font-size: 30px;
+  }
+  .botonTrabajoR a{
+    font-size: 25px;
+  }
+  .fondo_trabajosRecientes{
+    height: 1000px;
+  }
+  
+}
+
+
 /* small Laptop */
 @media screen and (max-width: 1065px) {
-
   .titulo_home {
     font-size: 35px;
   }
@@ -576,26 +673,27 @@ span {
   .titulo_LoQueHacemos {
     padding-top: 10%;
   }
-  .imagen_nav{
+
+  .imagen_nav {
     display: none;
   }
+
   .header {
     height: fit-content;
     display: grid;
-    grid-template-columns: repeat(1, minmax(
-      300px,
-      1fr
-    ));
+    grid-template-columns: repeat(1, minmax(300px, 1fr));
     align-items: center;
     justify-content: center;
     justify-items: center;
     padding: 5%;
   }
-  ul{
+
+  ul {
     padding-left: 0;
     padding-top: 7%;
   }
-  .navbar{
+
+  .navbar {
     grid-row: 2;
   }
 
@@ -652,7 +750,6 @@ span {
 }
 
 @media screen and (max-width: 882px) {
-
   .card1tr,
   .card2tr {
     justify-self: center;
@@ -669,8 +766,9 @@ span {
     flex-wrap: wrap;
   }
 }
-@media screen and (max-width:642px) {
-  .titulo_home{
+
+@media screen and (max-width: 642px) {
+  .titulo_home {
     width: 80%;
   }
 }
@@ -701,13 +799,16 @@ span {
     margin: 5% auto;
     padding: 3% 10%;
   }
-  .titulo_home{
+
+  .titulo_home {
     font-size: 20px;
   }
-  .tu_negocio::after{
+
+  .tu_negocio::after {
     border: 3px solid #fdc221;
   }
-  .texto_home{
+
+  .texto_home {
     font-size: 14px;
     text-align: justify;
     padding-right: 10%;
