--- a/style/index.css
+++ b/style/index.css
@@ -496,8 +496,67 @@ span {
   transition: width 1s ease-in-out;
 }
 
+.NuestrosTestimonios{
+  margin-top: 10%;
+}
 .underExpertos:hover:after {
   width: 90%;
+}
+.container-card{
+  margin-top: 5%;
+  width: 100%;
+  display: flex;
+  height: fit-content;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap:2%;
+}
+span{
+  position: relative;
+}
+.UnderCliente::after{
+  z-index: -1;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 10%;
+  border: 5px solid #FDC221;
+  width: 90%;
+}
+.gion{
+  color: #FDC221;
+  font-size: 26px;
+  justify-content: center;
+}
+.titulotestimonios{
+  font-family: "Hind Vadodara";
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+  color: #331B3B;
+}
+.Parrafo1{
+  font-size: 20px;
+}
+
+.tarjeta{
+  font-family: "Hind Vadodara";
+  width: 450px;
+  height: fit-content;
+  box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.08);
+  font-size: 16px;
+  color: #331B3B;
+  padding: 35px 35px 15px 35px;
+}
+.h4{
+  background-color: orange;
+  text-align: left;
+}
+.titulotestimonios{
+  text-align: center;
 }
 
 /* Media query's NM */
